Added a Test IAlgorithm implementation so we can test changing the Algorithm
Gradle now can Test using ServiceLoader, test Setup is now JDK9+ ready

Added gradle Application Plugin and configured it so you can run the Programm from gradle